testdata/test/resources/com/yafred/asn1/test/should-fail/export_not_defined.asn
-- FAILS: exported symbol not defined

My-Module DEFINITIONS ::=

BEGIN

EXPORTS A-Type;

My-Type ::= My-Integer

END